                                                     -*- coding: utf-8 -*-
Changes with APR-util 1.3.3

  *) Add Berkeley DB 4.7 support.
     [Arfrever Frehtes Taifersar Arahesis <arfrever.fta gmail.com>]

  *) PostgreSQL rows (internally) start from zero, not one. Account for it in
     row fetching function. [Bojan Smojver]

Changes with APR-util 1.3.2

  *) Fix parameter parsing error in ODBC DBD driver.  [Tom Donovan]

  *) Older OpenLDAP implementations may have ldap_set_rebind_proc() with two
     args. Provide detection code and alternative implementation.
     [Ruediger Pluem]

  *) Use pool memory when setting DBD driver name into the hash.
     [Bojan Smojver]

Changes with APR-util 1.3.1

  *) Add ODBC DBD Driver.  [Tom Donovan]

  *) Fix build of the FreeTDS and MySQL drivers.  [Bojan Smojver]

  *) Fix build failure for no modules (--disable-dso).  [Jean-Frederic Clere]

  *) Fix win32 build failure for no modules (empty DBD_LIST).  [William Rowe]

Changes with APR-util 1.3.0

  *) apr_reslist: destroy all resources in apr_cleanup (don't give up on error).
     PR 45086 [Nick Kew]

  *) Add apr_brigade_split_ex for reusing existing brigades in situation where
     brigades need to be split often during the lifetime of a pool.
     [Ruediger Pluem]

  *) Amend apr_reslist to expire resources whose idle time exceeds ttl.
     PR 42841 [Tom Donovan, Nick Kew, Ruediger Pluem]

  *) Modularize ldap's stub with the dbd dso modular structure, and teach
     the apu dso's to respect the system specific shared lib path var.
     To link to an application without ldap libs, query 
     `apu-1-config --avoid-ldap --libs` (in addition to the usual linker
     queries for compiling and linking).  [William Rowe]

  *) Support building DBD drivers as DSOs by default; use --disable-util-dso
     flag to configure to use static link.  [Joe Orton, Bojan Smojver]

  *) All DBD drivers now count rows from 1, which affects PostgreSQL and MySQL